// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Custom|Inheritance Base Button 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <storybook-base-button>
    <button>
      this is label
    </button>
  </storybook-base-button>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Custom|Inheritance Icon Button 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <storybook-icon-button>
    <button>
      this is label - this is icon
    </button>
  </storybook-icon-button>
</storybook-dynamic-app-root>
`;
